--- a/patients-manager/vercel.json
+++ b/patients-manager/vercel.json
@@ -1,20 +1,12 @@
 {
   "version": 2,
-  "public": true,
-  "builds": [],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html", "methods": ["GET", "HEAD"] },
-    { "handle": "filesystem" }
-  ],
-  "headers": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-Frame-Options", "value": "DENY" },
-        { "key": "Referrer-Policy", "value": "no-referrer" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" }
-      ]
+      "src": "patients-manager/**",
+      "use": "@vercel/static"
     }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/patients-manager/index.html" }
   ]
-} 
+}
